movieFetcher now up

--- a/src/main/webapp/movieFetcher.html
+++ b/src/main/webapp/movieFetcher.html
@@ -11,13 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div></div>
+ 
         
            <form id="form1" style="margin-left: auto; margin-right: auto;">
   <input type="text" id="fid" name="fid"><br>
   <input id="sub" type="submit" value="GetbyId">
     </form>
-        
+               <div id="movieDsc"></div>
         <script src="fetcherscript.js"></script>
     </body>
 </html>
