--- a/src/main/webapp/movieFetcher.html
+++ b/src/main/webapp/movieFetcher.html
@@ -14,8 +14,11 @@ and open the template in the editor.
  
         
            <form id="form1" style="margin-left: auto; margin-right: auto;">
-  <input type="text" id="fid" name="fid"><br>
-  <input id="sub" type="submit" value="GetbyId">
+  <input type="text" id="ftextbox" name="ftextbox"><br>
+  <input id="id" type="submit" value="GetbyId">
+   <input id="title" type="submit" value="GetbyTitle">
+    <input id="all" type="submit" value="GetAll">
+        <input id="genre" type="submit" value="GetbyGenre">
     </form>
                <div id="movieDsc"></div>
         <script src="fetcherscript.js"></script>
