--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,22 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Change or remove this page</h1>
-    </body>
+        <h1>Hej, klik et link</h1>
+        <p><b>Github:</b><a href="https://github.com/PatrickJahn/my-Hand-in/tree/master/FLOW1/week3">Denne uges opgaver</a></p>
+        <p><b>Travis status:</b><a href="https://github.com/PatrickJahn/Test-ci">Travis status</a></p>
+        <br>
+        <h2>Java script øvelses opgaverne fra dag 4</h2>
+        <p><b>Bubbling:</b><a href="https://patrickcph.dk/devops-starte/opgaver/Bubbling.html">Link</a></p>
+        <p><b>Lists:</b><a href="https://patrickcph.dk/devops-starte/opgaver/Lists.html">Link</a></p>
+        <p><b>Table:</b><a href="https://patrickcph.dk/devops-starte/opgaver/table.html">Link</a></p>
+        <p><b>Calculator:</b><a href="https://patrickcph.dk/devops-starte/opgaver/calculator.html">Link</a></p>
+        <p><b>Movie Fetcher:</b><a href="https://patrickcph.dk/devops-starte/movieFetcher.html">Link</a></p>
+
+        <h3>Description:</h3>
+        <p>Alle opgaver fra ugen skulle gerne være lavet og virke. Alt der ligger oppe på mit domain name "Patrickcph.dk" er blevet deployed vha. travis.
+            De opgaver der ikke kunne vises i en browser, ligger på min github - som er det første link på siden.
+        </p>
+        
+        
+        </body>
 </html>
